Cambios: Agregamos el añadir, "pasamanos"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 
-<app-main [tasks]="tasks"> </app-main>
+<app-main [tasks]="tasks" (addTaskEvent)="addTask($event)"> </app-main>
 
