--- a/src/app/task/task-form/task-form.component.html
+++ b/src/app/task/task-form/task-form.component.html
@@ -1,4 +1,4 @@
 <form action="">
-    <input type="text" placeholder="Ingrese una tarea">
-    <button>Guardar</button>
+    <input type="text" placeholder="Ingrese una tarea" #textTask>
+    <button (click)="addTask(textTask.value,$event)">Guardar</button>
 </form>
