--- a/src/app/task/list-item/list-item.component.html
+++ b/src/app/task/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <li>
     <div>
-      <input type="checkbox" name="" id="">
-      <p>{{task.text}}{{task.id}}</p>
+      <input type="checkbox" name="" id="" (click)="checkTask(task)">
+      <p>{{task.text}} {{task.id}} {{task.completed}}</p>
     </div>
     <div>
       <button (click)="removeTask(task.id,$event)">🗑</button>
